@@ -160,3 +160,7 @@ CPAN::Testers::Report = 0
 CPAN::Testers::Fact::LegacyReport = 0
 CPAN::Testers::Fact::TestSummary = 0
 Test::Reporter = 0
+
+; Test the MySQL JSON API
+[Prereqs / TestRecommends]
+Test::mysqld = 0
