@@ -27,7 +27,7 @@ $schema->resultset( 'MetabaseUser' )->create({
 });
 
 subtest 'insert_metabase_fact' => sub {
-    my $given_report = create_report(
+    my $given_report = create_metabase_report(
         grade => 'pass',
         distfile => 'PREACTION/Foo-Bar-1.24.tar.gz',
         distribution => 'Foo-Bar-1.24',
@@ -76,11 +76,99 @@ subtest 'insert_metabase_fact' => sub {
     is_deeply $got_report, $expect_report, 'Metabase::Fact is converted correctly';
 };
 
+subtest 'dist() - fetch reports by language/dist' => sub {
+    if ( !eval { require Test::mysqld; 1 } ) {
+        plan skip_all => 'Requires Test::mysqld';
+        return;
+    }
+
+    no warnings 'once';
+    my $mysqld = Test::mysqld->new(
+        my_cnf => {
+            'skip-networking' => '', # no TCP socket
+        },
+    );
+    if ( !$mysqld ) {
+        plan skip_all => $Test::mysqld::errstr;
+        return;
+    }
+
+    my $schema = CPAN::Testers::Schema->connect(
+        $mysqld->dsn(dbname => 'test'), undef, undef, { ignore_version => 1 },
+    );
+    $schema->deploy;
+
+    my %rows = (
+        'Perl 5' => {
+            'Foo-Bar-1.34' => $schema->resultset( 'TestReport' )->create( {
+                report => create_json_report(
+                    language => 'Perl 5',
+                    grade => 'pass',
+                    distribution => 'Foo-Bar',
+                    version => '1.34',
+                ),
+            } ),
+            'Foo-Bar-2.67' => $schema->resultset( 'TestReport' )->create( {
+                report => create_json_report(
+                    language => 'Perl 5',
+                    grade => 'fail',
+                    distribution => 'Foo-Bar',
+                    version => '2.67',
+                ),
+            } ),
+            'Fizz-Buzz-1.00' => $schema->resultset( 'TestReport' )->create( {
+                report => create_json_report(
+                    language => 'Perl 5',
+                    grade => 'pass',
+                    distribution => 'Fizz-Buzz',
+                    version => '1.00',
+                ),
+            } ),
+        },
+        'Perl 6' => {
+            'Foo-Bar-4.44' => $schema->resultset( 'TestReport' )->create( {
+                report => create_json_report(
+                    language => 'Perl 6',
+                    grade => 'pass',
+                    distribution => 'Foo-Bar',
+                    version => '4.44',
+                ),
+            } ),
+            'Fizz-Buzz-1.00' => $schema->resultset( 'TestReport' )->create( {
+                report => create_json_report(
+                    language => 'Perl 6',
+                    grade => 'pass',
+                    distribution => 'Fizz-Buzz',
+                    version => '6.78',
+                ),
+            } ),
+        },
+    );
+
+    subtest 'dist() without version' => sub {
+        my $rs = $schema->resultset( 'TestReport' );
+        $rs = $rs->dist( 'Perl 5', 'Foo-Bar' );
+        is_deeply
+            [ map { $_->id } $rs->all ],
+            [ map { $_->id } $rows{'Perl 5'}->@{qw( Foo-Bar-1.34 Foo-Bar-2.67 )} ],
+            'correct report ids found';
+    };
+
+    subtest 'dist() with version' => sub {
+        my $rs = $schema->resultset( 'TestReport' );
+        $rs = $rs->dist( 'Perl 5', 'Fizz-Buzz', '1.00' );
+        is_deeply
+            [ map { $_->id } $rs->all ],
+            [ map { $_->id } $rows{'Perl 5'}->@{qw( Fizz-Buzz-1.00 )} ],
+            'correct report ids found';
+    };
+};
+
 done_testing;
 
-#sub create_report
+#sub create_metabase_report
 #
-#   my $report = create_report(
+#   my $report = create_metabase_report(
 #       grade => 'pass',
 #       distfile => 'P/PR/PREACTION/Foo-Bar-1.24.tar.gz',
 #       distribution => 'Foo-Bar-1.24',
@@ -88,14 +176,14 @@ done_testing;
 #       creator => 'metabase:user:XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX',
 #   );
 #
-# Create a new report to submit. Returns a data structure suitable to be
-# encoded into JSON and submitted.
+# Create a new metabase report to submit. Returns a data structure
+# suitable to be encoded into JSON and submitted.
 #
 # This code is stolen from:
 #   * Test::Reporter::Transport::Metabase sub send
 #   * Metabase::Client::Simple sub submit_fact
 
-sub create_report( %attrs ) {
+sub create_metabase_report( %attrs ) {
     my $user = delete $attrs{creator};
     my $text = delete $attrs{textreport};
     my $report = Test::Reporter->new( transport => 'Null', %attrs );
@@ -124,4 +212,49 @@ sub create_report( %attrs ) {
     $metabase_report->close();
 
     return $metabase_report;
+}
+
+#sub create_json_report
+#
+#   my $report = create_json_report(
+#       grade => 'pass',
+#       distribution => 'Foo-Bar',
+#       version => '1.24',
+#       language => 'Perl 5',
+#   );
+#
+# Create a JSON report suitable to be stored in the database. Most of
+# the data is set to sane defaults, leaving only the testable data to
+# change.
+
+sub create_json_report( %args ) {
+    my $report = {
+        reporter => {
+            name => 'Doug Bell',
+            email => 'doug@preaction.me',
+        },
+        environment => {
+            system => {
+                osname => 'linux',
+                osversion => '2.14.4',
+            },
+            language => {
+                name => $args{language} || 'Perl 5',
+                archname => 'x86_64-linux',
+                version => '5.12.0',
+            },
+        },
+        distribution => {
+            name => $args{distribution},
+            version => $args{version},
+        },
+        result => {
+            grade => $args{grade},
+            output => {
+                uncategorized => 'Test output',
+            },
+        },
+    };
+
+    return $report;
 }
